error_set/tests/trybuild/depends_on_itself.stderr
error: Cycle Detected: BookParsingError->BookParsingError
 --> tests/trybuild/depends_on_itself.rs:4:5
  |
4 |     BookParsingError := {
  |     ^^^^^^^^^^^^^^^^
